<resources>

    <string name="app_name">Xposed Settings Injector</string>
    <string name="xposed_modules">Xposed Modules</string>
    <string name="xposed_description">Injects Xposed module settings into (close-to) stock Settings app.</string>

    <string name="settings_general_title">General</string>
    <string name="settings_only_show_installer_title">Only Xposed Installer</string>
    <string name="settings_only_show_installer">Only show the Xposed installer in the settings</string>
    <string name="settings_show_descriptions_title">Show descriptions</string>
    <string name="settings_show_descriptions">Show the Xposed description of the individual modules</string>
    <string name="settings_app_title">App</string>
    <string name="settings_hide_launcher_icon_title">Hide launcher icon</string>
    <string name="settings_hide_launcher_icon">May require launcher restart</string>

</resources>